--- a/Project_Files/static/dashboard.html
+++ b/Project_Files/static/dashboard.html
@@ -19,6 +19,7 @@
         <!-- Bootstrap core JavaScript -->
         <script src="{{url_for('static', filename='js/jquery-3.3.1.min.js')}}"></script>
         <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
+        <script src="{{url_for('static', filename='js/script.js')}}"></script>
     </head>
 
     <body>
@@ -49,10 +50,10 @@
             <div class="container">
                 <div class="text-center">
                     <br>
-                    <div class="search-container">
+                    <form class="search-container">
                         <input type="text" placeholder="Search..." name="search" size="60" id="search-bar">
-                        <button type="submit" id="search-button"><i class="fa fa-search"></i></button>
-                    </div>
+                        <input type="submit" id="search-button"><i class="fa fa-search"></i></input>
+                    </form>
                 </div>
             </div>
             <!-- /.container -->
