Search functionality in progress

--- a/Project_Files/static/Photos.html
+++ b/Project_Files/static/Photos.html
@@ -51,12 +51,13 @@
             </ol>
 
             <div class="gallery">
-                {% for photo in flattened_results %}
-                    <figure>
-                        <img src="photo[6]" alt="">
-                        <figcaption>photo[1]</figcaption>
-                    </figure>
-                {% endfor %}
+                <p>{{ flattened_results }}</p>
+{#                {% for photo in flattened_results %}#}
+{#                    <figure>#}
+{#                        <img src="photo[6]" alt="">#}
+{#                        <figcaption>photo[1]</figcaption>#}
+{#                    </figure>#}
+{#                {% endfor %}#}
             </div>
 
             <!-- Gallery section -->
