Displays all photos for user. Search not working yet.

--- a/Project_Files/static/Photos.html
+++ b/Project_Files/static/Photos.html
@@ -26,7 +26,7 @@
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container">
                 <a href="/" class="navbar-left"><img src="/static/PICTURES/logo_White.png"></a>
-                <a class="navbar-left" href="/">Home</a>
+                <a class="navbar-left" href="/Dashboard">Go Back</a>
                 <div class="dropdown">
                     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" href="#">{{user}}
                         <span class="caret"></span>
@@ -51,67 +51,15 @@
             </ol>
 
             <div class="gallery">
-                <p>{{ flattened_results }}</p>
-{#                {% for photo in flattened_results %}#}
-{#                    <figure>#}
-{#                        <img src="photo[6]" alt="">#}
-{#                        <figcaption>photo[1]</figcaption>#}
-{#                    </figure>#}
-{#                {% endfor %}#}
+                {% for photo in user_photos %}
+                    <figure>
+                        <a href="{{ photo }}">
+                            <img src="{{ photo }}" alt="">
+{#                          <figcaption>photo[1]</figcaption>#}
+                        </a>
+                    </figure>
+                {% endfor %}
             </div>
-
-            <!-- Gallery section -->
-            <div class="gallery">
-                <figure>
-                    <img src="static/PICTURES/index-4.jpg" alt="" />
-                    <figcaption>Daytona Beach <small>United States</small></figcaption>
-                </figure>
-                <figure>
-                    <img src="static/PICTURES/index-5.jpg" alt="" />
-                    <figcaption>Териберка, gorod Severomorsk <small>Russia</small></figcaption>
-                </figure>
-                <figure>
-                    <img src="static/PICTURES/index-6.jpg" alt="" />
-                    <figcaption>Bad Pyrmont <small>Deutschland</small></figcaption>
-                </figure>
-                <figure>
-                    <img src="static/PICTURES/index-7.jpg" alt="" />
-                    <figcaption>Yellowstoxne National Park <small>United States</small></figcaption>
-                </figure>
-                <figure>
-                    <img src="static/PICTURES/index-8.jpg" alt="" />
-                    <figcaption>Quiraing, Portree <small>United Kingdom</small></figcaption>
-                </figure>
-                <figure>
-                    <img src="static/PICTURES/index-9.jpg" alt="" />
-                    <figcaption>Highlands <small>United States</small></figcaption>
-                </figure>
-                <figure>
-                    <img src="static/PICTURES/index-4.jpg" alt="" />
-                    <figcaption>Daytona Beach <small>United States</small></figcaption>
-                </figure>
-                <figure>
-                    <img src="static/PICTURES/index-5.jpg" alt="" />
-                    <figcaption>Териберка, gorod Severomorsk <small>Russia</small></figcaption>
-                </figure>
-                <figure>
-                    <img src="static/PICTURES/index-6.jpg" alt="" />
-                    <figcaption>Bad Pyrmont <small>Deutschland</small></figcaption>
-                </figure>
-                <figure>
-                    <img src="static/PICTURES/index-7.jpg" alt="" />
-                    <figcaption>Yellowstoxne National Park <small>United States</small></figcaption>
-                </figure>
-                <figure>
-                    <img src="static/PICTURES/index-8.jpg" alt="" />
-                    <figcaption>Quiraing, Portree <small>United Kingdom</small></figcaption>
-                </figure>
-                <figure>
-                    <img src="static/PICTURES/index-9.jpg" alt="" />
-                    <figcaption>Highlands <small>United States</small></figcaption>
-                </figure>
-            </div>
-            <!-- /.gallery -->
         </div>
         <!-- /.container -->
 
