--- a/Project_Files/static/upload.html
+++ b/Project_Files/static/upload.html
@@ -26,7 +26,7 @@
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container">
                 <a href="/" class="navbar-left"><img src="/static/PICTURES/logo_White.png"></a>
-                <a class="navbar-left" href="/">Home</a>
+                <a class="navbar-left" href="/Dashboard">Go Back</a>
                 <div class="dropdown">
                     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" href="#">{{user}}
                         <span class="caret"></span>
@@ -47,8 +47,6 @@
                 <div class="text-center">
                     <br>
                     <div class="search-container">
-                        <input type="text" placeholder="Search..." name="search" size="60" id="search-bar">
-                        <button type="submit" id="search-button"><i class="fa fa-search"></i></button>
                     </div>
                 </div>
             </div>
