Fixed Search. Mostly works

--- a/Project_Files/static/Photos.html
+++ b/Project_Files/static/Photos.html
@@ -60,6 +60,16 @@
                     </figure>
                 {% endfor %}
             </div>
+            <div class="gallery">
+                {% for photo in flattened_results %}
+                    <figure>
+                        <a href="{{ photo[6] }}">
+                            <img src="{{ photo[6] }}" alt="">
+{#                          <figcaption>photo[1]</figcaption>#}
+                        </a>
+                    </figure>
+                {% endfor %}
+            </div>
             <hr>
         </div>
         <!-- /.container -->
