--- a/Project_Files/static/dashboard.html
+++ b/Project_Files/static/dashboard.html
@@ -52,7 +52,7 @@
                     <br>
                     <form class="search-container">
                         <input type="text" placeholder="Search..." name="search" size="60" id="search-bar">
-                        <input type="submit" id="search-button"><i class="fa fa-search"></i></input>
+                        <input type="button" value="Search" id="search-button"><i class="fa fa-search"></i></input>
                     </form>
                 </div>
             </div>
