--- a/Project_Files/static/Private.html
+++ b/Project_Files/static/Private.html
@@ -1,3 +1,9 @@
+<!---------------------------------------------------------------------------------------------------------------------
+< HTML for The Looking Glass
+< Filename: private.html
+< Advanced Python - Spring 2018 - University of South Florida
+< Group 2: Paul Hafer, Conner Wulf, Timothy Carney, Denis Saez Rodriguez, Joshua Imarhiagbe
+<--------------------------------------------------------------------------------------------------------------------->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -52,30 +58,6 @@
 
             <!-- Gallery section -->
             <div class="gallery">
-                <figure>
-                    <img src="static/PICTURES/index-4.jpg" alt="" />
-                    <figcaption>Daytona Beach <small>United States</small></figcaption>
-                </figure>
-                <figure>
-                    <img src="static/PICTURES/index-5.jpg" alt="" />
-                    <figcaption>Териберка, gorod Severomorsk <small>Russia</small></figcaption>
-                </figure>
-                <figure>
-                    <img src="static/PICTURES/index-6.jpg" alt="" />
-                    <figcaption>Bad Pyrmont <small>Deutschland</small></figcaption>
-                </figure>
-                <figure>
-                    <img src="static/PICTURES/index-7.jpg" alt="" />
-                    <figcaption>Yellowstoxne National Park <small>United States</small></figcaption>
-                </figure>
-                <figure>
-                    <img src="static/PICTURES/index-8.jpg" alt="" />
-                    <figcaption>Quiraing, Portree <small>United Kingdom</small></figcaption>
-                </figure>
-                <figure>
-                    <img src="static/PICTURES/index-9.jpg" alt="" />
-                    <figcaption>Highlands <small>United States</small></figcaption>
-                </figure>
                 <figure>
                     <img src="static/PICTURES/index-4.jpg" alt="" />
                     <figcaption>Daytona Beach <small>United States</small></figcaption>
