--- a/Project_Files/static/error.html
+++ b/Project_Files/static/error.html
@@ -1,3 +1,9 @@
+<!---------------------------------------------------------------------------------------------------------------------
+< HTML for The Looking Glass
+< Filename: error.html
+< Advanced Python - Spring 2018 - University of South Florida
+< Group 2: Paul Hafer, Conner Wulf, Timothy Carney, Denis Saez Rodriguez, Joshua Imarhiagbe
+<--------------------------------------------------------------------------------------------------------------------->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -20,7 +26,6 @@
         <script src="{{url_for('static', filename='js/jquery-3.3.1.min.js')}}"></script>
         <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
         <script src="{{url_for('static', filename='js/script.js')}}"></script>
-		
     </head>
 
     <body>
@@ -49,7 +54,7 @@
         <!-- Error -->
         <div style="text-align:center;">
            <h1 style="font-size:40px; padding:150px;">404 Not Found</h1>
-		   <a href="/" class="btn btn-secondary btn-lg">Take Me Home </a>
+		   <a href="/Dashboard" class="btn btn-secondary btn-lg">Take Me Home</a>
             <hr>
         </div>
         <!-- /.Error -->
@@ -61,7 +66,6 @@
             </div>
             <!-- /.container -->
         </footer>
-
     </body>
 </html>
 
