--- a/Project_Files/static/singlephoto.html
+++ b/Project_Files/static/singlephoto.html
@@ -1,3 +1,9 @@
+<!---------------------------------------------------------------------------------------------------------------------
+< HTML for The Looking Glass
+< Filename: singlephoto.html
+< Advanced Python - Spring 2018 - University of South Florida
+< Group 2: Paul Hafer, Conner Wulf, Timothy Carney, Denis Saez Rodriguez, Joshua Imarhiagbe
+<--------------------------------------------------------------------------------------------------------------------->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -97,13 +103,11 @@
                         <img class="img-fluid" src="http://placehold.it/500x300" alt="">
                     </a>
                 </div>
-
                 <div class="col-md-3 col-sm-6 mb-4">
                     <a href="#">
                         <img class="img-fluid" src="http://placehold.it/500x300" alt="">
                     </a>
                 </div>
-
                 <div class="col-md-3 col-sm-6 mb-4">
                     <a href="#">
                         <img class="img-fluid" src="http://placehold.it/500x300" alt="">
