Displays that users photos

--- a/Project_Files/static/dashboard.html
+++ b/Project_Files/static/dashboard.html
@@ -76,7 +76,7 @@
                             <p class="card-text">Your Photos is where you keep all of your photos.</p>
                         </div>
                         <div class="card-footer">
-                            <a href="/Photos" class="btn btn-primary">Go to Your Photos</a>
+                            <a href="/ShowPhotos" class="btn btn-primary">Go to Your Photos</a>
                         </div>
                     </div>
                 </div>
