--- a/Project_Files/static/Photos.html
+++ b/Project_Files/static/Photos.html
@@ -56,22 +56,22 @@
                 </li>
             </ol>
 
-            <div class="gallery">
-                {% for photo in resulting_photos %}
-                    <figure>
-                        <a href="{{ photo }}">
-                            <img src="{{ photo }}" alt="">
+{#            <div class="gallery">#}
+{#                {% for photo in resulting_photos %}#}
+{#                    <figure>#}
+{#                        <a href="{{ os.path.relpath(photo[6]) }}">#}
+{#                            <img src="{{ os.path.relpath(photo[6]) }}" alt="">#}
 {#                          <figcaption>photo[1]</figcaption>#}
-                        </a>
-                    </figure>
-                {% endfor %}
-            </div>
+{#                        </a>#}
+{#                    </figure>#}
+{#                {% endfor %}#}
+{#            </div>#}
             <div class="gallery">
-                {% for photo in resulting_photos %}
+                {% for photo in user_photos %}
                     <figure>
-                        <a href="{{ photo[6] }}">
-                            <img src="{{ photo[6] }}" alt="">
-{#                          <figcaption>photo[1]</figcaption>#}
+                        <a href="../{{ photo }}">
+                            <img src="../{{ photo }}" alt="">
+                          <figcaption>photo</figcaption>
                         </a>
                     </figure>
                 {% endfor %}
