--- a/Project_Files/static/singlephoto.html
+++ b/Project_Files/static/singlephoto.html
@@ -25,6 +25,7 @@
         <!-- Bootstrap core JavaScript -->
         <script src="{{url_for('static', filename='js/jquery-3.3.1.min.js')}}"></script>
         <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
+        <script src="{{url_for('static', filename='js/script.js')}}"></script>
     </head>
 
     <body>
@@ -61,19 +62,17 @@
             <div class="row">
                 <div class="col-md-8">
                     <img class="img-fluid" src="../{{ photo['filepath'] }}" alt="">
+                    <div id="image-id" class="text-hide">{{ photo['image_id'] }}</div>
                     <a class="btn btn-primary" href="../{{ photo['filepath'] }}" download>Download</a>
                 </div>
                 <div class="col-md-4">
                     <h3 class="my-3">Rating</h3>
                     <div class="row">
                         <div class="col-lg-12">
-                            <div class="star-rating">
-                                <span class="fa fa-star-o" data-rating="1"></span>
-                                <span class="fa fa-star-o" data-rating="2"></span>
-                                <span class="fa fa-star-o" data-rating="3"></span>
-                                <span class="fa fa-star-o" data-rating="4"></span>
-                                <span class="fa fa-star-o" data-rating="5"></span>
-                                <input type="hidden" name="whatever1" class="rating-value" value="{{ photo['rating'] }}">
+                            <div class="stars-outside">
+                                <div class="stars-inside">
+
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -81,9 +80,19 @@
                     <div class="col-md-6">
                         <div class="widget-area no-padding blank">
                             <div class="status-upload">
-                                <form>
-                                    <textarea placeholder="What do you think?" ></textarea>
-                                    <button type="submit" class="btn btn-success green"><i class="fa fa-send"></i> Send</button>
+                                <form id="comment-container">
+                                    <textarea name="comment" id="comment-box" placeholder="What do you think?"></textarea>
+                                    <label class="col-form-label" for="rating-selector">Rate it!</label>
+                                    <select class="custom-select" name="rating" id="rating-selector">
+                                        <option></option>
+                                        <option value="1">1 Star</option>
+                                        <option value="2">2 Stars</option>
+                                        <option value="3">3 Stars</option>
+                                        <option value="4">4 Stars</option>
+                                        <option value="5">5 Stars</option>
+                                    </select>
+                                    <input type="button" class="btn btn-primary" value="Send" id="send-comment">
+{#                                    <button type="submit" class="btn btn-success green"><i class="fa fa-send"></i>Send</button>#}
                                 </form>
                             </div>
                         </div>
@@ -97,6 +106,16 @@
                     <h2>About this photo</h2>
                     <p>{{ photo['description'] }}</p>
                     <h2>Photo credit: {{ photo['username'] }}</h2>
+                </div>
+                <div class="col-md-6">
+                    <h2>Comments</h2>
+                    <tbody>
+                        {% for comment in comments %}
+                            <tr>
+                                <td>{{ comment }}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
                 </div>
             </div>
 
@@ -136,5 +155,17 @@
             </div>
             <!-- /.container -->
         </footer>
+
+        <!-- JS to color the stars for the rating of the photo -->
+        <script>
+            let rating = 0;
+            rating = {{ photo['rating'] }};
+            const total_stars = 5;
+            const star_percentage = rating / total_stars * 100;
+            console.log(star_percentage);
+            const rounded_percentage = `${(Math.round(star_percentage / 10) * 10)}%`;
+            document.querySelector(`.stars-inside`).style.width = rounded_percentage;
+            console.log(star_percentage);
+        </script>
     </body>
 </html>
