--- a/Project_Files/static/Popular.html
+++ b/Project_Files/static/Popular.html
@@ -38,8 +38,9 @@
                         <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a href="/Dashboard">Your Homepage</a></li>
+                        <li><a href="/">Home</a></li>
                         <li><a href="/Upload">Upload Photos</a></li>
+                        <li><a href="/PrivateGallery">Private Photos</a></li>
                         <li><a href="/Logout"><span class="glyphicon glyphicon-log-in"></span>Logout</a></li>
                     </ul>
                 </div>
@@ -53,8 +54,9 @@
             <!-- Page Heading/Breadcrumbs -->
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                    <h3>Popular Photos</h3>
+                    <a href="/">Home</a>
                 </li>
+                <li class="breadcrumb-item active">Popular Photos</li>
             </ol>
 
             <!-- Gallery section -->
