--- a/Project_Files/static/Private.html
+++ b/Project_Files/static/Private.html
@@ -40,6 +40,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="/Dashboard">Your Homepage</a></li>
                         <li><a href="/Upload">Upload Photos</a></li>
+                        <li><a href="#">Private Photos</a></li>
                         <li><a href="/Logout"><span class="glyphicon glyphicon-log-in"></span>Logout</a></li>
                     </ul>
                 </div>
@@ -53,8 +54,9 @@
             <!-- Page Heading/Breadcrumbs -->
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                    <h3>Your Private Photos</h3>
+                    <a href="/Dashboard">Home</a>
                 </li>
+                <li class="breadcrumb-item active">Private Photos</li>
             </ol>
 
             <!-- Gallery section -->
