--- a/Project_Files/static/comment.html
+++ b/Project_Files/static/comment.html
@@ -35,7 +35,6 @@
                 <a href="/Dashboard" class="navbar-left"><img src="/static/PICTURES/logo_White.png"></a>
 
                 <div class="dropdown">
-                    <div class="greeting">OOPS!!!</div>
                     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" href="#">{{user}}
                         Menu
                         <span class="caret"></span>
@@ -52,15 +51,13 @@
         </nav>
 
         <hr>
-        <!-- Error -->
-        <div style="text-align:center;">
-            <h1 style="font-size:40px; padding:150px;">404 Not Found</h1>
+        <!-- Comment message -->
+        <div style="text-align: center;">
+            <h2 style="padding: 150px;">Thank you for your input!</h2>
             <a href="/Dashboard" class="btn btn-secondary btn-lg">Take Me Home</a>
-            <h3>{{ error_message }}</h3>
             <hr>
         </div>
-        <!-- /.Error -->
-		
+
         <!-- Footer -->
         <footer class="py-5 bg-dark footer" style="position: absolute; right: 0;  bottom: 0; left: 0;">
             <div class="container">
