--- a/Project_Files/static/singlephoto.html
+++ b/Project_Files/static/singlephoto.html
@@ -41,6 +41,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="/Dashboard">Your Homepage</a></li>
                         <li><a href="/Upload">Upload Photos</a></li>
+                        <li><a href="/PrivateGallery">Private Photos</a></li>
                         <li><a href="/Logout"><span class="glyphicon glyphicon-log-in"></span>Logout</a></li>
                     </ul>
                 </div>
@@ -63,20 +64,20 @@
                 <div class="col-md-8">
                     <img class="img-fluid" src="../{{ photo['filepath'] }}" alt="">
                     <div id="image-id" class="text-hide">{{ photo['image_id'] }}</div>
-                    <a class="btn btn-primary" href="../{{ photo['filepath'] }}" download>Download</a>
+                    {% if can_download == True %}
+                    <a class="btn btn-primary" id="download-button" href="../{{ photo['filepath'] }}" download>Download</a>
+                    {% endif %}
                 </div>
                 <div class="col-md-4">
                     <h3 class="my-3">Rating</h3>
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="stars-outside">
-                                <div class="stars-inside">
-
-                                </div>
+                                <div class="stars-inside"></div>
                             </div>
                         </div>
                     </div>
-                    <h3 class="my-3">Message The Publisher</h3>
+                    <h3 class="my-3">Leave a comment</h3>
                     <div class="col-md-6">
                         <div class="widget-area no-padding blank">
                             <div class="status-upload">
@@ -92,7 +93,6 @@
                                         <option value="5">5 Stars</option>
                                     </select>
                                     <input type="button" class="btn btn-primary" value="Send" id="send-comment">
-{#                                    <button type="submit" class="btn btn-success green"><i class="fa fa-send"></i>Send</button>#}
                                 </form>
                             </div>
                         </div>
@@ -103,51 +103,23 @@
 
             <div class="row">
                 <div class="col-md-6">
-                    <h2>About this photo</h2>
+                    <h3>About this photo</h3>
                     <p>{{ photo['description'] }}</p>
-                    <h2>Photo credit: {{ photo['username'] }}</h2>
+                    <h4>Photo credit: {{ photo['username'] }}</h4>
                 </div>
                 <div class="col-md-6">
-                    <h2>Comments</h2>
-                    <tbody>
+                    <h4>Comments</h4>
+                    <table class="d-md-table">
                         {% for comment in comments %}
-                            <tr>
-                                <td>{{ comment }}</td>
+                            <tr class="d-md-table-row">
+                                <td class="d-md-table-cell">{{ comment }}</td>
                             </tr>
                         {% endfor %}
-                    </tbody>
+                    </table>
                 </div>
             </div>
 
-            <!-- Related Pictures Row -->
-            <h3 class="my-4">Related Pictures</h3>
-            <div class="row">
-                <div class="col-md-3 col-sm-6 mb-4">
-                    <a href="#">
-                        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6 mb-4">
-                    <a href="#">
-                        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6 mb-4">
-                    <a href="#">
-                        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6 mb-4">
-                    <a href="#">
-                        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-                    </a>
-                </div>
-            </div>
-            <!-- /.row -->
             <hr>
-        </div>
-        <!-- /.container -->
-
         <!-- Footer -->
         <footer class="py-5 bg-dark">
             <div class="container">
