--- a/Project_Files/static/upload.html
+++ b/Project_Files/static/upload.html
@@ -40,6 +40,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="/Dashboard">Your Homepage</a></li>
                         <li><a href="#">Upload Photos</a></li>
+                        <li><a href="/PrivateGallery">Private Photos</a></li>
                         <li><a href="/Logout"><span class="glyphicon glyphicon-log-in"></span>Logout</a></li>
                     </ul>
                 </div>
@@ -94,6 +95,7 @@
                         </div>
                         <div class="form-group" style="text-align: center">
                             <input type="file" name="photo_file">
+                            <span>Make private  <input type="checkbox" id="private-check" name="private" value="private">    </span>
                             <input class="btn btn-primary" type="submit" value="Upload">
                         </div>
                     </form>
