Fixed upload links on certain pages

--- a/Project_Files/static/Popular.html
+++ b/Project_Files/static/Popular.html
@@ -39,7 +39,7 @@
                     </button>
                     <ul class="dropdown-menu">
                         <li><a href="/">Home</a></li>
-                        <li><a href="/Upload">Upload Photos</a></li>
+                        <li><a href="/UploadPhoto">Upload Photos</a></li>
                         <li><a href="/PrivateGallery">Private Photos</a></li>
                         <li><a href="/Logout"><span class="glyphicon glyphicon-log-in"></span>Logout</a></li>
                     </ul>
